<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10sp"
    android:background="@drawable/dialog_shape">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:src="@drawable/search"
        android:tint="@color/view_colour"
        tools:ignore="UseAppTint"
        android:contentDescription="@string/app_name" />
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bg_edittext"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:padding="16sp"
        android:maxLines="1"
        android:hint="@string/search_bar"
        android:textSize="16sp"
        android:id="@+id/etSearchName"
        android:layout_gravity="center"
        android:autofillHints=""
        android:inputType="text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="horizontal">
        <Button

            android:layout_height="wrap_content"
            android:layout_width="100sp"
             android:text="@string/btn_back"
            android:textColor="@color/title_colour"
            android:background="@android:color/transparent"
            android:id="@+id/btnBack"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="200sp"
            android:textColor="@color/success_colour"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue"
            android:id="@+id/btnContinue"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>