...
    android:id ="@+id/layoutResult"
    android:visibility="gone"
     >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id= "@+id/imgResult"
    android:layout_marginTop="20sp"
    android:translationZ="90dp"
    android:layout_marginBottom="20sp"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/no_results" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:textSize="16sp"
...
