<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<!-- Third Party Template used below:
Github Repository: zxing-android-embedded,
Journey Apps,
https://github.com/journeyapps/zxing-android-embedded/blob/master/sample/src/main/res/layout/custom_barcode_scanner.xml
 -->
    <com.journeyapps.barcodescanner.BarcodeView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/zxing_barcode_surface"
        app:zxing_framing_rect_width="250dp"
        app:zxing_framing_rect_height="250dp"/>

    <com.journeyapps.barcodescanner.ViewfinderView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/zxing_viewfinder_view"
        app:zxing_possible_result_points="@color/zxing_custom_possible_result_points"
        app:zxing_result_view="@color/zxing_custom_result_view"
        app:zxing_viewfinder_laser="@color/zxing_custom_viewfinder_laser"
       app:zxing_viewfinder_mask="@color/zxing_custom_viewfinder_mask"/> <!-- END -->




    <ImageButton
        android:id="@+id/btnFlash"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:src="@drawable/ic_flash_off"
        android:background="#00FFFFFF"
        android:layout_gravity="bottom|right"
        android:layout_centerHorizontal="true"
                />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom|left"
        android:id="@+id/btnSearch"
        android:textColor="#ffffff"
        android:textSize="13sp"
        android:background="@drawable/circle"
        android:drawableBottom="@drawable/ic_type"
        android:text="@string/btn_search"
        tools:ignore="RtlHardcoded" />

</merge>